test/message/esm_display_syntax_error_module.out
file:///*/test/fixtures/es-module-loaders/syntax-error.mjs:2
await async () => 0;
^^^^^^^^^^^^^

SyntaxError: Malformed arrow function parameter list
    at ESMLoader.moduleStrategy (node:internal/modules/esm/translators:*:*)
    at ESMLoader.moduleProvider (node:internal/modules/esm/loader:*:*)

Node.js *
